<resources>
    <string name="app_name">Devices Info</string>
    <string name="error_occured">Some error occurred. Try again!</string>
    <string name="loading">Loading...</string>
    <string name="name">Name</string>
    <string name="android_version_info">Android Version Information</string>
    <string name="code">Code</string>
    <string name="alert_button_ok">Ok</string>
    <string name="alert_button_cancel">Cancel</string>
    <string name="empty" />
    <string name="alert_button_yes">Yes</string>
    <string name="alert_button_no">No</string>
    <string name="device_delete_confirmation">Are you sure to delete the device?</string>
    <string name="version_delete_confirmation">Are you sure to delete the Version?</string>
    <string name="image_url">Image URL</string>
    <string name="description">Description</string>
    <string name="android_id">Android id</string>
    <string name="edit_Device_info">Edit Device Information</string>
    <string name="button_save">Save</string>
    <string name="button_add">Add</string>
    <string name="add_device">Add Device</string>
    <string name="alert_name_empty">Device name cannot be empty</string>
    <string name="alert_android_id_empty">Android Id cannot be empty</string>
    <string name="alert_description_empty">Device description cannot be empty</string>
    <string name="alert_android_id_number">Android id must be an integer</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="version">Version</string>
    <string name="code_name">Code Name</string>
    <string name="target">Target</string>
    <string name="distribution">Distribution</string>
    <string name="alert_version_name_empty">Version name cannot be empty</string>
    <string name="alert_target_empty">Target cannot be empty</string>
    <string name="alert_code_name_empty">Code name cannot be empty</string>
    <string name="alert_distribution_empty">Distribution cannot be empty</string>
    <string name="alert_version_code_empty">Version code cannot be empty</string>
    <string name="add_version">Add Version</string>
    <string name="edit_version_info">Edit Version Information</string>
    <string name="version_info">Version Info</string>
    <string name="create_new_version">Version information does not exist. Would you like to create a new version?</string>
</resources>
