<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zahid.mitask.devicesinfo.activity.EditDeviceActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:stretchColumns="2">

        <TableRow>

            <TextView
                android:layout_column="1"
                android:text="@string/name"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_name"
                android:singleLine="true" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:text="@string/code"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_code"
                android:singleLine="true" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:text="@string/code_name"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_code_name"
                android:singleLine="true" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:text="@string/target"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_target"
                android:inputType="number"
                android:singleLine="true" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:text="@string/distribution"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_distribution"
                android:singleLine="true" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:textColor="@android:color/white" />

</LinearLayout>
